sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

02-13-2017 18:17:
/home/g_ablyazov/Projects/rudenta/.sublime-gulp-tmp.js:196
            className = ".svg-%f-icon",
            ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Invalid shorthand property initializer
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at requireGulp (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:83:12)


02-13-2017 18:17:
/home/g_ablyazov/Projects/rudenta/.sublime-gulp-tmp.js:196
            className = ".svg-%f-icon",
            ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Invalid shorthand property initializer
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at requireGulp (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:83:12)


02-13-2017 18:28:
/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:31
        throw ex;
        ^

ReferenceError: svgSprites is not defined
    at Object.<anonymous> (/home/g_ablyazov/Projects/rudenta/.sublime-gulp-tmp.js:27:21)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at requireGulp (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)


02-13-2017 18:28:
/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:31
        throw ex;
        ^

ReferenceError: svgSprites is not defined
    at Object.<anonymous> (/home/g_ablyazov/Projects/rudenta/.sublime-gulp-tmp.js:27:21)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at requireGulp (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)


02-13-2017 18:44:
/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:31
        throw ex;
        ^

ReferenceError: svgSprites is not defined
    at Object.<anonymous> (/home/g_ablyazov/Projects/rudenta/.sublime-gulp-tmp.js:27:21)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at requireGulp (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/g_ablyazov/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)
